# harmony_bev_projection

./: .gitignore  README.md  annotate_cameras.py  compute_homography.py  project_to_bev.py  pyproject.toml
data/: bev_transform.json  cameras.txt  correspondences.json  image_bev_homographies_analytical.json  refined_poses.txt  undistorted_cameras.json
lib/: bev.py  camera.py  colmap.py
